--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-
+// Colors
 $main-color:#f6f6f6;
 $background-color: #eaeaea;
 $font-color: #99E2D0;
@@ -8,6 +8,8 @@ $fonctionnement-color:#7e7e7e;
 $fonctionnement-secondarycolor: #9356DC;
 $btn-gradient: linear-gradient(#FF79DA,#9356DC);
 
+
+// Général
 * {
     font-family: roboto;
 }
