--- a/sass/layout/index.scss
+++ b/sass/layout/index.scss
@@ -40,7 +40,6 @@ main {
 .Fonctionnement {
     padding: 50px 20px 70px 20px;
     .Fonctionnement__list {
-        list-style: none;
         margin: 0;
         padding-left: 10px;
         display: flex;
@@ -120,5 +119,33 @@ main {
     &--subtitle {
         @include CardSubtitle;
         font-size: 17px;
+    }
+}
+
+/* Media Querie */
+@media (min-width: 768px) {
+    .Fonctionnement {
+        display: flex;
+        flex-direction: column;
+        padding: 50px 180px;
+        .Fonctionnement__list {
+            flex-direction: row;
+            padding-left: 0;
+            gap: 25px;
+            align-items: stretch;
+            &--txt {
+                flex: 1;
+            }
+        }
+    }
+
+    .restaurants {
+        padding: 30px 180px;
+    }
+
+    .restaurants__cards {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 100px;
     }
 }
