--- a/sass/main.css
+++ b/sass/main.css
@@ -18,8 +18,7 @@ footer .footer__list {
   font-size: 16px;
   font-weight: 500;
   line-height: normal;
-  list-style: none;
-  padding-left: 0;
+  padding-top: 15px;
   display: flex;
   flex-direction: column;
   gap: 7px;
@@ -33,6 +32,20 @@ footer .footer__list .footer__list--icon {
   align-self: center;
 }
 
+/* Media Queries */
+@media (min-width: 768px) {
+  footer {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    padding: 60px 25px 30px 25px;
+    gap: 60px;
+  }
+  footer .footer__list {
+    flex-direction: row;
+    padding-top: 0;
+  }
+}
 .headerIndex {
   display: flex;
   flex-direction: column;
@@ -114,7 +127,6 @@ main {
   padding: 50px 20px 70px 20px;
 }
 .Fonctionnement .Fonctionnement__list {
-  list-style: none;
   margin: 0;
   padding-left: 10px;
   display: flex;
@@ -203,6 +215,31 @@ main {
   font-size: 17px;
 }
 
+/* Media Queries */
+@media (min-width: 768px) {
+  .Fonctionnement {
+    display: flex;
+    flex-direction: column;
+    padding: 50px 180px;
+  }
+  .Fonctionnement .Fonctionnement__list {
+    flex-direction: row;
+    padding-left: 0;
+    gap: 25px;
+    align-items: stretch;
+  }
+  .Fonctionnement .Fonctionnement__list--txt {
+    flex: 1;
+  }
+  .restaurants {
+    padding: 30px 180px;
+  }
+  .restaurants__cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 100px;
+  }
+}
 .main__menu {
   background-color: #f6f6f6;
   display: flex;
