--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,8 +17,23 @@
     }
 }
 
+// Header page Restaurant
 .headerMenu {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    padding-left: 17px;
+    &__retour {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 17px;
+    }
 }
+
+.restaurant__img {
+    object-fit: cover;
+    width: 100%;
+    height: 275px;
+}
+
