--- a/sass/layout/index.scss
+++ b/sass/layout/index.scss
@@ -47,13 +47,21 @@ main {
         width: 100%;
         gap: 25px;
 
+        &--content {
+            display: flex;
+            align-items: center;
+            position: relative;
+        }
+
         &--txt {
             @include txtHomepage;
+            width: 100%;
             display: flex;
-            justify-content: space-around;
+            justify-content: center;
+            gap: 20px;
             border: none;
             border-radius: 20px;
-            padding: 30px 40px;
+            padding: 30px 0;
             background: $main-color;
             box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
             margin: 0;
@@ -61,17 +69,17 @@ main {
     }
 }
 
-/* essai de style des numeros 
-    .Fonctionnement__list--number {
-        border-radius: 50%;
-        background-color: $fonctionnement-color;
-        padding: 10px;
-        width: 20px;
-        height:20px;
-        color: white;
-        position: relative;
-        text-align: center;
-    } */
+.Fonctionnement__list--number {
+    border-radius: 50%;
+    background-color: $fonctionnement-secondarycolor;
+    padding: 10px;
+    width: 15px;
+    height:15px;
+    color: white;
+    position: absolute;
+    left: -20px;
+    text-align: center;
+    }
 
 .icon {
     color:$fonctionnement-color ;
@@ -95,6 +103,18 @@ main {
         gap: 20px;
         justify-content: space-between;
     }
+}
+
+.badge__nouveau {
+    border-radius: 2px;
+    background-color: $font-color;
+    color: $badge-txt-color;
+    padding: 6px;
+    width: 80px;
+    height: 30px;
+    @include txtHomepage;
+    text-align: center;
+    position: absolute;
 }
 
 .restaurants__card {
@@ -122,30 +142,37 @@ main {
     }
 }
 
-/* Media Querie */
+/* Media Queries*/
+
 @media (min-width: 768px) {
     .Fonctionnement {
-        display: flex;
-        flex-direction: column;
-        padding: 50px 180px;
         .Fonctionnement__list {
             flex-direction: row;
-            padding-left: 0;
-            gap: 25px;
-            align-items: stretch;
+            justify-content: space-between;
             &--txt {
                 flex: 1;
+                gap: 10px;
+                justify-content: center;
+                padding: 30px 0;
             }
+            &--content {
+                flex: 1;
+            }    
         }
     }
-
-    .restaurants {
-        padding: 30px 180px;
-    }
-
     .restaurants__cards {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 100px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .Fonctionnement {
+        padding: 50px 180px;
+    }
+
+    .restaurants{
+        padding: 30px 180px;
     }
 }
