--- a/sass/layout/menu.scss
+++ b/sass/layout/menu.scss
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 .main__menu {
     background-color: $main-color;
     display: flex;
@@ -5,24 +9,17 @@
 }
 
 .menu__card {
-    box-sizing: border-box;
     background-color: $main-color;
-    > img {
-        object-fit: cover;
-        width: 100%;
-        height: 275px;
-    }
     &--content {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         border-top-left-radius: 40px;
         border-top-right-radius: 40px;
-        padding: 40px 20px 0 20px;
+        padding-top: 40px;
         position: relative;
         bottom: 40px;
         background-color: $main-color;
-
     }   
 }
 
@@ -52,26 +49,61 @@
     gap: 15px;
     flex-direction: column;
     &__content {
+        display: flex;
+        justify-content: space-between;
         border-radius: 15px;
+        align-items: end;
         background-color: white;
         padding: 15px;
         box-shadow: 0px 4.011px 15.043px 0px rgba(0, 0, 0, 0.10);
-        > h3 {
-            @include CardTitle;
-            font-weight: 500;
-        }
     }
 }
 .menu__items {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     &--txt {
         @include CardSubtitle;
         font-size: 15px;
+    }
+    > h3 {
+        margin: 0;
+        @include CardTitle;
+        font-weight: 500;
     }
 }
 
 .CTA {
     display: flex;
     justify-content: center;
+}
+
+/* Media queries*/
+@media (min-width: 768px) {
+    
+    .main__menu {
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+    .menu__card--content {
+        justify-content: center;
+        gap: 24px;
+    }
+    
+    .menu {
+        padding-left: 100px;
+        padding-right: 100px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .main__menu {
+        margin-left: 190px;
+        margin-right: 190px;
+    }
+
+    .menu {
+        padding-left: 140px;
+        padding-right: 140px;
+    }
 }
