--- a/sass/main.css
+++ b/sass/main.css
@@ -23,6 +23,9 @@ footer .footer__list {
   flex-direction: column;
   gap: 7px;
 }
+footer .footer__list--txtnormal {
+  font-weight: 400;
+}
 footer .footer__list .footer__list--icon {
   display: flex;
   gap: 11px;
@@ -71,8 +74,22 @@ footer .footer__list .footer__list--icon {
 
 .headerMenu {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.headerMenu__retour {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
   padding-left: 17px;
+}
+
+.restaurant__img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 275px;
 }
 
 main {
@@ -134,33 +151,41 @@ main {
   width: 100%;
   gap: 25px;
 }
+.Fonctionnement .Fonctionnement__list--content {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
 .Fonctionnement .Fonctionnement__list--txt {
   font-family: roboto;
   font-style: normal;
   font-size: 16px;
   font-weight: 500;
   line-height: normal;
+  width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 20px;
   border: none;
   border-radius: 20px;
-  padding: 30px 40px;
+  padding: 30px 0;
   background: #f6f6f6;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
   margin: 0;
 }
 
-/* essai de style des numeros 
-    .Fonctionnement__list--number {
-        border-radius: 50%;
-        background-color: $fonctionnement-color;
-        padding: 10px;
-        width: 20px;
-        height:20px;
-        color: white;
-        position: relative;
-        text-align: center;
-    } */
+.Fonctionnement__list--number {
+  border-radius: 50%;
+  background-color: #9356DC;
+  padding: 10px;
+  width: 15px;
+  height: 15px;
+  color: white;
+  position: absolute;
+  left: -20px;
+  text-align: center;
+}
+
 .icon {
   color: #7e7e7e;
 }
@@ -183,6 +208,22 @@ main {
   flex-direction: column;
   gap: 20px;
   justify-content: space-between;
+}
+
+.badge__nouveau {
+  border-radius: 2px;
+  background-color: #99E2D0;
+  color: #008766;
+  padding: 6px;
+  width: 80px;
+  height: 30px;
+  font-family: roboto;
+  font-style: normal;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: normal;
+  text-align: center;
+  position: absolute;
 }
 
 .restaurants__card {
@@ -215,24 +256,20 @@ main {
   font-size: 17px;
 }
 
-/* Media Queries */
+/* Media Queries*/
 @media (min-width: 768px) {
-  .Fonctionnement {
-    display: flex;
-    flex-direction: column;
-    padding: 50px 180px;
-  }
   .Fonctionnement .Fonctionnement__list {
     flex-direction: row;
-    padding-left: 0;
-    gap: 25px;
-    align-items: stretch;
+    justify-content: space-between;
   }
   .Fonctionnement .Fonctionnement__list--txt {
     flex: 1;
+    gap: 10px;
+    justify-content: center;
+    padding: 30px 0;
   }
-  .restaurants {
-    padding: 30px 180px;
+  .Fonctionnement .Fonctionnement__list--content {
+    flex: 1;
   }
   .restaurants__cards {
     display: grid;
@@ -240,6 +277,18 @@ main {
     gap: 100px;
   }
 }
+@media (min-width: 1024px) {
+  .Fonctionnement {
+    padding: 50px 180px;
+  }
+  .restaurants {
+    padding: 30px 180px;
+  }
+}
+body {
+  margin: 0;
+}
+
 .main__menu {
   background-color: #f6f6f6;
   display: flex;
@@ -247,22 +296,15 @@ main {
 }
 
 .menu__card {
-  box-sizing: border-box;
   background-color: #f6f6f6;
-}
-.menu__card > img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 100%;
-  height: 275px;
 }
 .menu__card--content {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
-  padding: 40px 20px 0 20px;
+  padding-top: 40px;
   position: relative;
   bottom: 40px;
   background-color: #f6f6f6;
@@ -305,22 +347,18 @@ main {
   flex-direction: column;
 }
 .menu__content {
+  display: flex;
+  justify-content: space-between;
   border-radius: 15px;
+  align-items: end;
   background-color: white;
   padding: 15px;
   box-shadow: 0px 4.011px 15.043px 0px rgba(0, 0, 0, 0.1);
 }
-.menu__content > h3 {
-  font-family: Roboto;
-  font-size: 18px;
-  font-style: normal;
-  line-height: normal;
-  margin: 0;
-  font-weight: 500;
-}
 
 .menu__items {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 .menu__items--txt {
@@ -331,12 +369,46 @@ main {
   margin: 0;
   font-size: 15px;
 }
+.menu__items > h3 {
+  margin: 0;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  line-height: normal;
+  margin: 0;
+  font-weight: 500;
+}
 
 .CTA {
   display: flex;
   justify-content: center;
 }
 
+/* Media queries*/
+@media (min-width: 768px) {
+  .main__menu {
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+  .menu__card--content {
+    justify-content: center;
+    gap: 24px;
+  }
+  .menu {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+}
+@media (min-width: 1024px) {
+  .main__menu {
+    margin-left: 190px;
+    margin-right: 190px;
+  }
+  .menu {
+    padding-left: 140px;
+    padding-right: 140px;
+  }
+}
 body {
   margin: 0;
 }
