--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -3,13 +3,34 @@ main {
     flex-direction: column;
 }
 
+.location {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 17px;
+    padding: 20px;
+    background-color: $background-color;
+    width: 100%;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    z-index: 1;
+
+    &__value {
+        border: none;
+        background-color: $background-color;
+        font-size: 16px;
+        font-weight: 500;
+        color: $footer-color;
+    }
+}
+
+
 .IndexTitle {
-    @include IndexTitle;
     padding: 0 50px 0 50px;
+    font-size: 24px;
+    font-weight: 700;
 }
 
 .IndexSubtitle {
-    @include IndexTitle;
     padding-bottom: 25px;
 }
 
@@ -28,17 +49,14 @@ main {
     text-align: center;
 
     &__txt {
-        font-family: Roboto;
         font-size: 18px;
-        font-style: normal;
         font-weight: 300;
-        line-height: normal;
-        margin: 0;
     }
 }
 
 .Fonctionnement {
     padding: 50px 20px 70px 20px;
+
     .Fonctionnement__list {
         margin: 0;
         padding-left: 10px;
@@ -53,8 +71,20 @@ main {
             position: relative;
         }
 
+        &--number{
+            border-radius: 50%;
+            background-color: $fonctionnement-secondarycolor;
+            padding: 10px;
+            width: 15px;
+            height:15px;
+            color: white;
+            position: absolute;
+            left: -20px;
+            text-align: center;
+        }
+
         &--txt {
-            @include txtHomepage;
+            font-weight: 500;
             width: 100%;
             display: flex;
             justify-content: center;
@@ -68,18 +98,6 @@ main {
         }
     }
 }
-
-.Fonctionnement__list--number {
-    border-radius: 50%;
-    background-color: $fonctionnement-secondarycolor;
-    padding: 10px;
-    width: 15px;
-    height:15px;
-    color: white;
-    position: absolute;
-    left: -20px;
-    text-align: center;
-    }
 
 .icon {
     color:$fonctionnement-color ;
@@ -105,61 +123,70 @@ main {
     }
 }
 
-.badge__nouveau {
-    border-radius: 2px;
-    background-color: $font-color;
-    color: $badge-txt-color;
-    padding: 6px;
-    width: 80px;
-    height: 30px;
-    @include txtHomepage;
-    text-align: center;
-    position: absolute;
-}
-
 .restaurants__card {
+    position: relative;
     box-sizing: border-box;
     background-color: white;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
 
-    &--content {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 0 15px;
-        padding : 15px 0;
+    &--badge{
+        border-radius: 2px;
+        background-color: $font-color;
+        color: $badge-txt-color;
+        padding: 6px;
+        font-weight: 500;
+        text-align: center;
+        position: absolute;
+        top: 15px;
+        right: 15px;
     }
 
-    &--title {
-        @include CardTitle;
+    &--content{
+        padding: 15px;
+    }
+
+    h3{
         font-weight: 700;
     }
 
-    &--subtitle {
-        @include CardSubtitle;
+    p{
         font-size: 17px;
+        font-weight: 300;
+    }
+
+    &--heart{
+        position: absolute;
+        right: 15px;
+        bottom: 30px;
     }
 }
 
 /* Media Queries*/
 
 @media (min-width: 768px) {
+    .IndexTitle {
+        font-size: 40px;
+    }
+
     .Fonctionnement {
         .Fonctionnement__list {
             flex-direction: row;
             justify-content: space-between;
+
             &--txt {
                 flex: 1;
                 gap: 10px;
                 justify-content: center;
                 padding: 30px 0;
             }
+
             &--content {
                 flex: 1;
             }    
         }
     }
+
     .restaurants__cards {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -172,7 +199,7 @@ main {
         padding: 50px 180px;
     }
 
-    .restaurants{
+    .restaurants {
         padding: 30px 180px;
     }
 }
