--- a/sass/main.css
+++ b/sass/main.css
@@ -1,5 +1,36 @@
 * {
-  font-family: roboto;
+  font-family: "Roboto", sans-serif;
+}
+
+h1, h2, h3, p {
+  margin: 0;
+}
+
+body {
+  font-size: 16px;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.logo {
+  width: 100%;
+  height: 30px;
+  padding-top: 25px;
+  padding-bottom: 15px;
+}
+
+.Btn {
+  font-size: 16px;
+  font-weight: 500;
+  color: white;
+  border: none;
+  padding: 13px 19px;
+  border-radius: 25px;
+  background: linear-gradient(#FF79DA, #9356DC);
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
 footer {
@@ -13,20 +44,13 @@ footer .footer__logo {
   filter: invert(1);
 }
 footer .footer__list {
-  font-family: roboto;
-  font-style: normal;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: normal;
   padding-top: 15px;
   display: flex;
   flex-direction: column;
   gap: 7px;
 }
-footer .footer__list--txtnormal {
-  font-weight: 400;
-}
-footer .footer__list .footer__list--icon {
+footer .footer__list--icon {
+  font-weight: 500;
   display: flex;
   gap: 11px;
 }
@@ -55,21 +79,7 @@ footer .footer__list .footer__list--icon {
   justify-content: center;
   align-items: center;
   width: 100%;
-}
-.headerIndex__location {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 17px;
-  background-color: #eaeaea;
-  width: 100%;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  font-family: roboto;
-  font-style: normal;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: normal;
-  color: #353535;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .headerMenu {
@@ -97,23 +107,32 @@ main {
   flex-direction: column;
 }
 
+.location {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 17px;
+  padding: 20px;
+  background-color: #eaeaea;
+  width: 100%;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  z-index: 1;
+}
+.location__value {
+  border: none;
+  background-color: #eaeaea;
+  font-size: 16px;
+  font-weight: 500;
+  color: #353535;
+}
+
 .IndexTitle {
-  font-family: Roboto;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  margin: 0;
   padding: 0 50px 0 50px;
+  font-size: 24px;
+  font-weight: 700;
 }
 
 .IndexSubtitle {
-  font-family: Roboto;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  margin: 0;
   padding-bottom: 25px;
 }
 
@@ -132,12 +151,8 @@ main {
   text-align: center;
 }
 .Infogroup__txt {
-  font-family: Roboto;
   font-size: 18px;
-  font-style: normal;
   font-weight: 300;
-  line-height: normal;
-  margin: 0;
 }
 
 .Fonctionnement {
@@ -156,12 +171,19 @@ main {
   align-items: center;
   position: relative;
 }
+.Fonctionnement .Fonctionnement__list--number {
+  border-radius: 50%;
+  background-color: #9356DC;
+  padding: 10px;
+  width: 15px;
+  height: 15px;
+  color: white;
+  position: absolute;
+  left: -20px;
+  text-align: center;
+}
 .Fonctionnement .Fonctionnement__list--txt {
-  font-family: roboto;
-  font-style: normal;
-  font-size: 16px;
   font-weight: 500;
-  line-height: normal;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -172,18 +194,6 @@ main {
   background: #f6f6f6;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
   margin: 0;
-}
-
-.Fonctionnement__list--number {
-  border-radius: 50%;
-  background-color: #9356DC;
-  padding: 10px;
-  width: 15px;
-  height: 15px;
-  color: white;
-  position: absolute;
-  left: -20px;
-  text-align: center;
 }
 
 .icon {
@@ -210,54 +220,45 @@ main {
   justify-content: space-between;
 }
 
-.badge__nouveau {
-  border-radius: 2px;
-  background-color: #99E2D0;
-  color: #008766;
-  padding: 6px;
-  width: 80px;
-  height: 30px;
-  font-family: roboto;
-  font-style: normal;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: normal;
-  text-align: center;
-  position: absolute;
-}
-
 .restaurants__card {
+  position: relative;
   box-sizing: border-box;
   background-color: white;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
 }
-.restaurants__card--content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 15px;
-  padding: 15px 0;
+.restaurants__card--badge {
+  border-radius: 2px;
+  background-color: #99E2D0;
+  color: #008766;
+  padding: 6px;
+  font-weight: 500;
+  text-align: center;
+  position: absolute;
+  top: 15px;
+  right: 15px;
 }
-.restaurants__card--title {
-  font-family: Roboto;
-  font-size: 18px;
-  font-style: normal;
-  line-height: normal;
-  margin: 0;
+.restaurants__card--content {
+  padding: 15px;
+}
+.restaurants__card h3 {
   font-weight: 700;
 }
-.restaurants__card--subtitle {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
-  margin: 0;
+.restaurants__card p {
   font-size: 17px;
+  font-weight: 300;
+}
+.restaurants__card--heart {
+  position: absolute;
+  right: 15px;
+  bottom: 30px;
 }
 
 /* Media Queries*/
 @media (min-width: 768px) {
+  .IndexTitle {
+    font-size: 40px;
+  }
   .Fonctionnement .Fonctionnement__list {
     flex-direction: row;
     justify-content: space-between;
@@ -311,20 +312,13 @@ body {
 }
 
 .menu__card--title {
-  font-family: Shrikhand;
+  font-family: "Shrikhand", serif;
   font-size: 28px;
-  font-style: normal;
   font-weight: 400;
-  line-height: normal;
-  margin: 0;
 }
 
 .subtitle-border {
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 300;
-  line-height: normal;
-  margin: 0;
   font-size: 16px;
   position: relative;
   margin-bottom: 9px;
@@ -362,20 +356,12 @@ body {
   justify-content: space-between;
 }
 .menu__items--txt {
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 300;
-  line-height: normal;
-  margin: 0;
   font-size: 15px;
 }
 .menu__items > h3 {
   margin: 0;
-  font-family: Roboto;
   font-size: 18px;
-  font-style: normal;
-  line-height: normal;
-  margin: 0;
   font-weight: 500;
 }
 
@@ -408,33 +394,4 @@ body {
     padding-left: 140px;
     padding-right: 140px;
   }
-}
-body {
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.logo {
-  width: 100%;
-  height: 30px;
-  padding-top: 25px;
-  padding-bottom: 15px;
-}
-
-.Btn {
-  font-family: roboto;
-  font-style: normal;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: normal;
-  color: white;
-  border: none;
-  padding: 13px 19px;
-  border-radius: 25px;
-  background: linear-gradient(#FF79DA, #9356DC);
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 }/*# sourceMappingURL=main.css.map */
