--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,23 +7,14 @@
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
-// Header page Restaurant
+// Header page "Restaurant"
 .headerMenu {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    &__retour {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-left: 17px;
-    }
+    width: 100%;
+    padding-left: 20px;
 }
 
-.restaurant__img {
-    object-fit: cover;
-    width: 100%;
-    height: 275px;
-}
+
 
