--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -57,7 +57,7 @@ main {
 .Fonctionnement {
     padding: 50px 20px 70px 20px;
 
-    .Fonctionnement__list {
+    &__list {
         margin: 0;
         padding-left: 10px;
         display: flex;
@@ -121,56 +121,56 @@ main {
         gap: 20px;
         justify-content: space-between;
     }
-}
 
-.restaurants__card {
-    position: relative;
-    box-sizing: border-box;
-    background-color: white;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
+    &__card {
+        position: relative;
+        box-sizing: border-box;
+        background-color: white;
+        border-bottom-left-radius: 15px;
+        border-bottom-right-radius: 15px;
 
-    &--badge{
-        border-radius: 2px;
-        background-color: $font-color;
-        color: $badge-txt-color;
-        padding: 6px;
-        font-weight: 500;
-        text-align: center;
-        position: absolute;
-        top: 15px;
-        right: 15px;
-    }
+        &--badge{
+            border-radius: 2px;
+            background-color: $font-color;
+            color: $badge-txt-color;
+            padding: 6px;
+            font-weight: 500;
+            text-align: center;
+            position: absolute;
+            top: 15px;
+            right: 15px;
+        }
 
-    &--content{
-        padding: 15px;
-    }
+        &--content{
+            padding: 15px;
+        }
 
-    h3{
-        font-weight: 700;
-    }
+        h3 {
+            font-weight: 700;
+        }
 
-    p{
-        font-size: 17px;
-        font-weight: 300;
-    }
+        p {
+            font-size: 17px;
+            font-weight: 300;
+        }
 
-    &--heart{
-        position: absolute;
-        right: 15px;
-        bottom: 30px;
+        &--heart {
+            position: absolute;
+            right: 15px;
+            bottom: 30px;
+        }
     }
 }
 
 /* Media Queries*/
-
+// Tablets
 @media (min-width: 768px) {
     .IndexTitle {
         font-size: 40px;
     }
 
     .Fonctionnement {
-        .Fonctionnement__list {
+        &__list {
             flex-direction: row;
             justify-content: space-between;
 
@@ -193,7 +193,7 @@ main {
         gap: 100px;
     }
 }
-
+// Desktop
 @media (min-width: 1024px) {
     .Fonctionnement {
         padding: 50px 180px;
