--- a/sass/main.css
+++ b/sass/main.css
@@ -47,12 +47,12 @@ footer .footer__list {
   padding-top: 15px;
   display: flex;
   flex-direction: column;
-  gap: 7px;
+  gap: 5px;
 }
 footer .footer__list--icon {
   font-weight: 500;
   display: flex;
-  gap: 11px;
+  gap: 10px;
 }
 
 .fa-handshake-angle {
@@ -66,11 +66,13 @@ footer .footer__list--icon {
     flex-direction: row-reverse;
     align-items: center;
     padding: 60px 25px 30px 25px;
-    gap: 60px;
+    gap: 15px;
   }
   footer .footer__list {
     flex-direction: row;
+    gap: 10px;
     padding-top: 0;
+    padding-right: 70px;
   }
 }
 .headerIndex {
@@ -84,22 +86,10 @@ footer .footer__list--icon {
 
 .headerMenu {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.headerMenu__retour {
-  width: 100%;
-  display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 17px;
-}
-
-.restaurant__img {
-  -o-object-fit: cover;
-     object-fit: cover;
   width: 100%;
-  height: 275px;
+  padding-left: 20px;
 }
 
 main {
@@ -158,7 +148,7 @@ main {
 .Fonctionnement {
   padding: 50px 20px 70px 20px;
 }
-.Fonctionnement .Fonctionnement__list {
+.Fonctionnement__list {
   margin: 0;
   padding-left: 10px;
   display: flex;
@@ -166,12 +156,12 @@ main {
   width: 100%;
   gap: 25px;
 }
-.Fonctionnement .Fonctionnement__list--content {
+.Fonctionnement__list--content {
   display: flex;
   align-items: center;
   position: relative;
 }
-.Fonctionnement .Fonctionnement__list--number {
+.Fonctionnement__list--number {
   border-radius: 50%;
   background-color: #9356DC;
   padding: 10px;
@@ -182,7 +172,7 @@ main {
   left: -20px;
   text-align: center;
 }
-.Fonctionnement .Fonctionnement__list--txt {
+.Fonctionnement__list--txt {
   font-weight: 500;
   width: 100%;
   display: flex;
@@ -219,7 +209,6 @@ main {
   gap: 20px;
   justify-content: space-between;
 }
-
 .restaurants__card {
   position: relative;
   box-sizing: border-box;
@@ -259,17 +248,17 @@ main {
   .IndexTitle {
     font-size: 40px;
   }
-  .Fonctionnement .Fonctionnement__list {
+  .Fonctionnement__list {
     flex-direction: row;
     justify-content: space-between;
   }
-  .Fonctionnement .Fonctionnement__list--txt {
+  .Fonctionnement__list--txt {
     flex: 1;
     gap: 10px;
     justify-content: center;
     padding: 30px 0;
   }
-  .Fonctionnement .Fonctionnement__list--content {
+  .Fonctionnement__list--content {
     flex: 1;
   }
   .restaurants__cards {
@@ -293,7 +282,14 @@ body {
 .main__menu {
   background-color: #f6f6f6;
   display: flex;
+  flex-direction: column;
   padding-bottom: 40px;
+}
+
+.restaurant__img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 275px;
 }
 
 .menu__card {
@@ -305,12 +301,11 @@ body {
   align-items: center;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
-  padding-top: 40px;
+  padding-top: 50px;
   position: relative;
   bottom: 40px;
   background-color: #f6f6f6;
 }
-
 .menu__card--title {
   font-family: "Shrikhand", serif;
   font-size: 28px;
@@ -349,7 +344,6 @@ body {
   padding: 15px;
   box-shadow: 0px 4.011px 15.043px 0px rgba(0, 0, 0, 0.1);
 }
-
 .menu__items {
   display: flex;
   flex-direction: column;
@@ -376,13 +370,13 @@ body {
     margin-left: 100px;
     margin-right: 100px;
   }
-  .menu__card--content {
-    justify-content: center;
-    gap: 24px;
-  }
   .menu {
     padding-left: 100px;
     padding-right: 100px;
+  }
+  .menu__card--content {
+    justify-content: center;
+    gap: 24px;
   }
 }
 @media (min-width: 1024px) {
